[workspace]
resolver = "2"
members = [ "app", "app-derive" ]
exclude = [ "hfuzz", "deps/ledger-rust" ]

[workspace.package]
edition = "2018"
authors = ["Zondax <hello@zondax.ch>"]

[workspace.dependencies]
bolos = { git = "https://github.com/Zondax/ledger-rust", rev = "ec6eb97" }
bolos-common = { git = "https://github.com/Zondax/ledger-rust", rev = "ec6eb97" }
zemu-sys = { git = "https://github.com/Zondax/ledger-rust", rev = "ec6eb97" }
zuit = { git = "https://github.com/Zondax/ledger-rust", rev = "ec6eb97" }

[profile.dev]
panic = "abort"

[profile.release]
lto = false
codegen-units = 1
debug = false
opt-level = "z"
